# InferenceProfiler

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  az_loop.sh  exp_loop.sh  generate_testdata.sh  go.mod  go.sum  main.go  main.tofu  pyproject.toml  text.txt  times.txt  tmp.json
.github/workflows/: build.yaml  build.yml  workflow.yml
analysis/: graph.ipynb
collectors/: base.go  container.go  cpu.go  disk.go  manager.go  mem.go  net.go  nvidia.go  proc.go  types.go  vllm.go
configs/: default.env
configs/cloud-init/: client.yaml  server.yaml
configs/systemd/: benchmark.slice  infpro.service  profiler.slice  vllm.service
data/W1/: metrics.parquet  requests.raw.parquet  runs.parquet  runs.raw.parquet
data/W2/: requests.raw.parquet  runs.parquet  runs.raw.parquet  tokens.raw.parquet
docker/: Dockerfile.sysbench  Dockerfile.vllm.run  Dockerfile.vllm.serve  entrypoint-serve.sh
docs/: InferenceProfiler.postman_collection.json  InferenceProfilerDataDictionary.csv
inference_profiler/: exporter.py  main.py
inference_profiler/collectors/: base.py  base_collector.py  collector_manager.py  container.py  cpu.py  disk.py  mem.py  net.py  nvidia.py  proc.py  vllm.py
infra/: main.tofu  output.tofu  variables.tofu
infra/modules/: ecs.tofu  identity.tofu  networking.tofu
pkg/cmd/: common.go  graph.go  profile.go  profiler.go  serve.go  snapshot.go
pkg/collecting/: collecting_bench_test.go  collector.go  cpu.go  (+12 more)
scripts/: bench.py  collect.py  start_bench
src/: aggregator.py  container.go  cpu.go  disk.go  main.go  main.py  manager.go  mem.go  net.go  nvidia.go  proc.go  vllm.go
utils/: exporter.go
(+159 files in other folders)
