[project]
name = "inference-profiler"
version = "0.1.0"
description = "System resource profiler with export to CSV/Parquet"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.scripts]
inference-profiler = "inference_profiler.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inference_profiler"]