[project]
name = "InferenceProfiler"
version = "0.1.0"
description = "System resource profiler with export to CSV/Parquet"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nvidia-ml-py>=11.5.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.scripts]
InferenceProfiler = "inference_profiler.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inference_profiler"]

[tool.hatch.build.targets.sdist]
include = [
    "/inference_profiler",
    "/README.md",
    "/pyproject.toml",
]